[metadata]
description-file = README.md

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 120

[flake8]
max-line-length = 120
extend-ignore = E203, W503, C901, F401, F403, E722
max-complexity = 10

[mypy]
ignore_missing_imports = True
show_error_context = True
show_column_numbers = True
show_error_codes = True
pretty = True
